<resources>
    <string name="app_name">Widgets</string>
    <string name="title_amplitude_bar_view">AmplitudeBarView</string>
    <string name="title_amplitude_bezier_view">AmplitudeBezierView</string>
    <string name="title_activity_amplitude_bar">AmplitudeBarActivity</string>
    <string name="title_feature_discovery">FeatureDiscovery</string>

    <string name="text_left_to_right">Left -&gt; Right</string>
    <string name="text_right_to_left">Left &lt;- Right</string>
    <string name="text_debug">Debug Mode</string>

    <string name="btn_start_record">Start</string>
    <string name="btn_stop_record">Stop</string>
    <string name="btn_check_amp_file">Check amp file</string>
    <string name="btn_play_amp_file">Play amp file</string>
    <string name="btn_stop_play_amp_file">Stop play amp file</string>

    <string name="pref_bar_color_dark">Bar Color Dark</string>
    <string name="pref_bar_color">Bar Color</string>
</resources>
