<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.nulldreams.demo.widgets.WaveformActivity">
    <com.nulldreams.widget.AmplitudeBarView
        android:id="@+id/waveform_view"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="8dp"
        android:layout_margin="8dp"
        android:background="@drawable/bg_outline_dark_gray"
        app:barColor="@android:color/darker_gray"
        app:barWidth="8dp"
        app:gapWidth="2dp"
        app:period="400"
        app:maxValue="100"
        app:minValue="2"
        app:debug="true"
        app:direction="left_to_right"/>
    <Button
        android:id="@+id/waveform_start_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_start_record"/>
    <RadioGroup
        android:id="@+id/waveform_direction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/waveform_left_to_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_left_to_right"
            android:checked="true"
            />
        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/waveform_right_to_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_right_to_left"
            />
    </RadioGroup>
    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/waveform_debug"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_debug"
        android:checked="true"
        />
    <Button
        android:id="@+id/waveform_check_amp_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_check_amp_file"/>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/waveform_log_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
